<resources>
    <string name="app_name">Training Center App</string>
    <!-- Add these lines -->
    <string name="user_photo">User Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <!-- Other string resources -->
</resources>
